# Ingram-Micro-Data-Import

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: config.example.yaml
icecat_integration/: __init__.py  config.py  main.py
icecat_integration/api/: __init__.py  base_client.py  json_data_fetch_service.py  xml_data_service.py  xml_product_fetch_service.py
icecat_integration/database/: __init__.py  connection.py
icecat_integration/enums/: __init__.py  addon_type.py  icecat_feature_type.py  media_type.py  product_status.py
icecat_integration/mappers/: __init__.py  icecat_language_mapper.py  icecat_supplier_mapper.py  product_mapper.py
icecat_integration/models/: __init__.py
icecat_integration/models/db/: __init__.py  attribute_names.py  base.py  category.py  category_display.py  locales.py  (+17 more)
icecat_integration/parsers/: __init__.py  category_features_parser.py  xml_product_parser.py
icecat_integration/repositories/: __init__.py  base_repository.py  delta_repository.py  errors_repository.py  log_repository.py  product_repository.py  supplier_mapping_repository.py  sync_repository.py  taxonomy_repository.py
icecat_integration/scripts/: batch_sync_eans.py
icecat_integration/services/: __init__.py  assortment_reader.py  batch_processor.py  comparison_service.py  daily_index_service.py  ftp_service.py  product_matcher.py  product_sync_service.py  sync_orchestrator.py  taxonomy_update_service.py
icecat_integration/utils/: __init__.py  logging_utils.py  retry.py  validators.py
(+14 files in other folders)
