[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icecat-integration"
version = "1.0.0"
description = "Python application for fetching product data from Icecat"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Icecat Commerce"}
]
keywords = ["icecat", "product-data", "integration", "pim"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx[http2]>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "lxml>=4.9.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "alembic>=1.13.0",
    "click>=8.1.0",
    "aiofiles>=23.2.0",
    "python-json-logger>=2.0.0",
    "orjson>=3.9.0",
    "paramiko>=3.4.0",
]

[project.scripts]
icecat = "icecat_integration.main:cli"

[project.urls]
"Homepage" = "https://github.com/Icecat-Commerce/Ingram-Micro-Data-Import"
"Bug Tracker" = "https://github.com/Icecat-Commerce/Ingram-Micro-Data-Import/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["icecat_integration*"]

